--- a/tarifs.html
+++ b/tarifs.html
@@ -960,8 +960,8 @@ margin-right: -20px;
       transform: translateX(-50%);
     }
 
-    .plan-chip--start{background: #f6c342;}
-    .plan-chip--grow{background: #4caf61;}
+    .plan-chip--start{background: #f6c342;color: #DF0A28;}
+    .plan-chip--grow{background: #4caf61;color: #FBD366}
     .plan-chip--scale{background: #2f7de1;}
 
     .payments-section{
